force-app/main/default/objects/Fitness_Center__c/Fitness_Center__c.object-meta.xml
<CustomObject>
    <label>Fitness Center</label>
    <nameField>
        <displayFormat>Center ID - {0000}</displayFormat>
        <label>Center ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitness Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>