force-app/main/default/objects/Fitness_Center__c/fields/Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Center_Name__c</fullName>
    <label>Center Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>