force-app/main/default/objects/Fitness_Center__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <type>TextArea</type>
</CustomField>