force-app/main/default/objects/Fitness_Center__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <label>Operating Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>